--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,9 @@
         "es6": true
     },
     "rules": {
+        "no-alert": 0,
         "react/jsx-uses-react": 2,
+        "no-case-declarations": 0,
         "react/jsx-uses-vars": 2,
         "react/react-in-jsx-scope": 2,
         "react/prop-types": 0,
@@ -27,6 +29,7 @@
         "one-var-declaration-per-line": ["error", "initializations"],
         "max-len": ["error", 200],
         "no-extra-parens": 0,
+        "import/prefer-default-export": 0,
         "no-restricted-syntax": [
           0,
           "DebuggerStatement"
