--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.0.3",
     "jquery": "^3.3.1",
     "lodash.debounce": "^4.0.8",
     "react": "^16.3.2",
